# loader-app

./: README.md  debug.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
src/: debug.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: debug.json  default.json  main.json
src-tauri/src/: bootstrap.rs  cert.rs  config.rs  hash.rs  hwid.rs  java.rs  lib.rs  main.rs  network.rs  registry.rs  utils.rs
src-tauri/vmprotect/: Cargo.toml
src-tauri/vmprotect-sys/: Cargo.toml  build.rs
src-tauri/vmprotect-sys/src/: lib.rs
src-tauri/vmprotect/src/: lib.rs  licensing.rs
src-tauri/vmprotect/src/strings/: encrypted_a.rs  encrypted_w.rs
src/components/client/: loader-client.tsx
src/components/dialog/: install-client-dialog.tsx  update-dialog.tsx
src/components/field/: ui-field.tsx
src/components/setting/: game-settings.tsx  game-window-settings.tsx  loader-settings.tsx
src/components/sidebar/: app-sidebar.tsx
src/components/ui/: dialog.tsx  input.tsx  select.tsx  spinner.tsx
src/hooks/: use-translation.tsx
src/layers/: background-layer.tsx  titlebar-layer.tsx
src/pages/: debug-page.tsx  index-page.tsx  login-page.tsx
src/pages/sub-page/: index-dashboard-page.tsx  index-settings-page.tsx
src/services/: auth-service.ts  client-service.ts  update-service.ts
src/utils/: config.ts  utils.ts
