[package]
name = "loader-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["mentola"]
edition = "2021"

[lib]
name = "loader_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.53.0"
sha2 = "0.10.8"
hex = "0.4"
tauri-plugin-http = "2.0.0"
sysinfo = "0.33.1"
windows = { version = "0.59.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem", "Win32_Security", "Win32_Graphics_Gdi"] }
raw-cpuid = "11.2.0"
tauri-plugin-dialog = "2"
tauri-plugin-upload = "2"
tokio = { version = "1.43.0", features = ["full"] }
tasklist = "0.2.15"
